fix: removes layout shift when opening navbar in mobile

--- a/src/assets/scss/animation.scss
+++ b/src/assets/scss/animation.scss
@@ -15,7 +15,7 @@
       height: 100%;
       transform: scaleX(var(--scale));
       transform-origin: center right;
-      z-index: 999;
+      z-index: 3;
     }
   }
 }
