--- a/src/assets/scss/foundations.scss
+++ b/src/assets/scss/foundations.scss
@@ -98,6 +98,7 @@ body {
 }
 
 main {
+    padding-top: 4.5rem;
     flex: 1;
 
     &:focus {
