--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -1,4 +1,8 @@
 .site-header {
+    position: absolute;
+    z-index: 4;
+    background: var(--body-background-color);
+    width: 100%;
     padding: .75rem 0;
     border-top: 4px solid var(--link-color);
     border-bottom: 1px solid var(--divider-color);
